--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
     <title>Document</title>
     <style>
         .container {
+            box-sizing: border-box;
             width: 200px;
             height: 200px;
-            outline: 5px solid red;
-            color: green;
+            outline: 3px dashed rgb(9, 35, 39);
+            color: rgb(163, 16, 16);
+            background-color: rgb(88, 196, 26);
+            margin-top: 40vh;
+            margin-left: 75vh;
+            text-align: center;
+            padding-top: 85px;
+            border-radius: 50px;
         }
     </style>
 </head>
